# vigilant-steel

./: .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  index.html  rustfmt.toml
benches/: simple.rs
client-piston/: Cargo.toml  Web.toml
client-piston/src/: main.rs  render.rs
client-test/: Cargo.toml
client-test/src/: main.rs
client-web/: Cargo.toml  index.html  index.js  simpleserver.py
client-web/assets/: damage1.sfxr  explosion1.sfxr  explosion2.sfxr  explosion3.sfxr  laser.sfxr
client-web/src/: lib.rs  logger.rs  net.rs  primitives.rs  render.rs
color-logger/: Cargo.toml
color-logger/src/: lib.rs
scripts/: build-web.sh
scripts/githooks/: pre-commit
server/: Cargo.toml
server/src/: main.rs
src/: asteroid.rs  blocks.rs  client.rs  game.rs  guns.rs  input.rs  lib.rs  main.rs  net.rs  particles.rs  physics.rs  render.rs  sat.rs  sector.rs  server.rs  ship.rs  tree.rs  utils.rs
src/net/: base.rs  mod.rs  stub.rs  udp.rs  websocket.rs
