[workspace]
members = ["client-piston", "server", "color-logger"]

[package]
name = "game"
version = "0.1.0"
authors = ["Remi Rampin <remirampin@gmail.com>"]
license = "GPL-3.0"
repository = "https://gitlab.com/remram44/vigilant-steel"
description = "Space game with Piston"
readme = "README.md"
keywords = ["game"]

[dependencies]
byteorder = "1.3"
log = "0.4"
rand = "0.7"
specs = "0.15"
vecmath = "1.0"

[features]
network = []
