[workspace]
members = ["client-web", "server", "client-test", "color-logger"]

[package]
name = "game"
version = "0.1.0"
edition = "2018"
authors = ["Remi Rampin <remirampin@gmail.com>"]
license = "GPL-3.0"
repository = "https://gitlab.com/remram44/vigilant-steel"
description = "Space game using WebAssembly - core game logic"
readme = "README.md"
keywords = ["game", "web", "webgl"]

[dependencies]
byteorder = "1.3"
log = "0.4"
rand = "0.7"
specs = { version = "0.16", default-features = false, features = ["wasm-bindgen"] }
vecmath = "1.0"
tokio = { version = "0.2", optional = true }
futures-channel = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tungstenite = { version = "*", optional = true }
tokio-tungstenite = { version = "0.11", optional = true }

[features]
network = []
websocket = ["network", "tokio", "tokio/sync", "tokio/stream", "futures-channel", "futures-util", "tungstenite", "tokio-tungstenite"]

[profile.release]
lto = true
opt-level = "s"
