[package]
workspace = ".."
name = "client-piston"
version = "0.1.0"
authors = ["Remi Rampin <remirampin@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/remram44/vigilant-steel"
description = "Space game with Piston"
readme = "README.md"
keywords = ["game"]

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
game = { path = ".." }
color-logger = { path = "../color-logger" }

log = "0.3"
specs = "0.10"

sdl2 = "0.30"
pistoncore-sdl2_window = "0.46"

# Abstract graphics
conrod = { version = "0.56", features = ["piston"] }
piston = "0.35"
piston2d-graphics = "0.25"

# Concrete graphics - GL
piston2d-opengl_graphics = { version = "0.49", optional = true }

# Concrete graphics - GFX
piston2d-gfx_graphics = { version = "0.49", optional = true }
gfx = { version = "0.17", optional = true }
gfx_device_gl = { version = "0.15", optional = true }
shader_version = { version = "0.3", optional = true }

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3"

[features]
default = ["use_sdl2_mac_framework", "network"]
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]
network = ["game/network"]
graphics-gl = ["piston2d-opengl_graphics"]
graphics-gfx = ["piston2d-gfx_graphics", "gfx", "gfx_device_gl", "shader_version"]
