[package]
workspace = ".."
name = "client-piston"
version = "0.1.0"
authors = ["Remi Rampin <remirampin@gmail.com>"]
license = "GPL-3.0"
repository = "https://gitlab.com/remram44/vigilant-steel"
description = "Space game with Piston"
readme = "README.md"
keywords = ["game"]

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
game = { path = ".." }
color-logger = { path = "../color-logger" }

log = "0.4"
rand = "0.7"
specs = "0.10"
vecmath = "1.0"

# Abstract graphics
conrod = { version = "0.61", features = ["piston"] }
piston = "0.49"
piston2d-graphics = "0.35"

# Concrete graphics
piston2d-opengl_graphics = "0.69"
pistoncore-sdl2_window = "0.63"
sdl2 = "0.32"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3"

[features]
default = ["sdl2/use_mac_framework", "network"]
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]
network = ["game/network"]
