[package]
workspace = ".."
name = "client-web"
version = "0.1.0"
edition = "2018"
authors = ["Remi Rampin <r@remirampin.com>"]
license = "GPL-3.0"
repository = "https://gitlab.com/remram44/vigilant-steel"
description = "Space game using WebAssembly - client"
keywords = ["game", "web", "webgl"]

[lib]
crate-type = ["cdylib"]

[dependencies]
game = { path = ".." }
wasm-bindgen = "0.2.63"
log = "0.4"
rand = "0.7"
specs = { version = "0.16", default-features = false, features = ["wasm-bindgen"] }
vecmath = "1.0"

[features]
default = ["game/network"]
