[package]
workspace = ".."
name = "server"
version = "0.1.0"
authors = ["Remi Rampin <remirampin@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/remram44/vigilant-steel"
description = "Space game with Piston"
readme = "README.md"
keywords = ["game"]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
game = { path = ".." }

env_logger = "0.4"
log = "0.3"
