[package]
workspace = ".."
name = "server"
version = "0.1.0"
edition = "2018"
authors = ["Remi Rampin <remirampin@gmail.com>"]
license = "GPL-3.0"
repository = "https://gitlab.com/remram44/vigilant-steel"
description = "Space game using WebAssembly - server component"
keywords = ["game", "web", "webgl"]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
color-logger = { path = "../color-logger" }
game = { path = ".." }
log = "0.4"

[features]
udp = ["game/network"]
websocket = ["game/websocket"]
